--- a/config/database.yml
+++ b/config/database.yml
@@ -5,3 +5,8 @@ development:
 test:
   adapter: postgresql
   database: betastore_test
+
+production:
+  adapter: postgresql
+  database: betastore_production
+
